options reorganized